3529 - rewrite muted users
